# snooker-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
src/snooker_analytics/: __init__.py  __main__.py  settings.py
tests/: test_run.py
