[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "snooker_analytics"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
snooker-analytics = "snooker_analytics.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "snooker_analytics"
project_name = "snooker-analytics"
kedro_init_version = "0.19.9"
tools = [ "Testing", "Custom Logging", "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/snooker_analytics -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "snooker_analytics.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
